app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
}

html {
  scroll-behavior: smooth;
}

body {
  @apply bg-base-100 text-neutral;
  overflow: hidden;
}

@media (max-width: 768px) {
  body {
    overflow: auto; /* ใช้ scrollbar ปกติ */
  }
}

.container {
  min-height: 100vh;
}

.section {
  height: 100vh;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 2rem;
  background-color: #f8f9fa;
  border-bottom: 1px solid #ddd;
}

.section:nth-child(even) {
  background-color: #dde1e6;
}

.pagination {
  position: fixed;
  right: 20px;
  top: 50%;
  transform: translateY(-50%);
  display: flex;
  flex-direction: column;
  align-items: center;

}

.pagination-item {
  display: flex;
  justify-content: center;
  margin: 10px 0;
  cursor: pointer;
  position: relative;
  transition: transform 0.2s ease;
}
/* Hover effect */
.pagination-item:hover {
  transform: scale(1.1); 
  background-color: #f0f0f0; 
}

/* Adding the content on hover using ::before (for left positioning) */
.pagination-item:hover::before {
  content: attr(data-name);
  display: block;
  position: absolute;
  top: 49%;
  left: -100px;
  width: 100px;
  opacity: 0;
  text-align: right;
  font-size: 14px;
  line-height: 100%;
  text-transform: uppercase;
  font-weight: 600;
  color: #ececec;
  align-items:center ;
  transform: translateX(-10px) scale(.9);
  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
}

.pagination-item:hover::before {
  opacity: 1; /* Show the content */
  transform: translateY(-50%) translateX(-10px) scale(1); 
}

.pagination-item:hover::after {
  content: "";
  position: absolute;
  opacity: 0;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background: #fff;
  border: 4px solid rgba(16, 16, 16, .18);
  transform: rotate(45deg) scale(.9);
  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
}

.pagination-item:hover::after {
  opacity: 1; /* ทำให้เส้นขอบมองเห็นเมื่อ hover */
  transform: rotate(45deg) scale(1); /* ขยายขอบเมื่อ hover */
}

.diamond {
  width: 12px;
  height: 12px;
  background-color: #e0e0e0;
  clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
}

.pagination-item.active .diamond {
  background-color: #074940; /* Red for active item */
  transform: scale(1.2);
}


.pagination-item.active:hover::after {
  content: "";
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background: #074940;
  border: 4px solid rgba(16, 16, 16, .18);
  transform: rotate(45deg);
}

.content {
  min-height: 100vh; /* เต็มจอ */
  max-height: none;  /* ลบ max-height */
}

.floating-box {
  box-sizing: border-box; /* รวม padding และ border เข้ากับขนาดกรอบ */
  padding: 0.5rem; /* Padding ด้านในกรอบ */
  width: calc(100% - 1rem); /* ลดขนาดกรอบตาม padding */
  height: calc(100vh - 1rem - 2px); /* ลดขนาดกรอบตาม padding */
  border: 1px solid #27272a;
  position: fixed; /* ลอยอยู่กลางหน้าจอ */
  z-index: 50;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.mil-active {
  position: relative;  /* ทำให้ตำแหน่งของเส้นแนวตั้งสัมพันธ์กับลิงก์ */
}

.mil-active::after {
  content: "";
  display: block;
  position: absolute;
  bottom: 0;  /* เส้นจะอยู่ใต้คำ */
  left: 50%;  /* จัดเส้นให้อยู่ตรงกลาง */
  width: 1px;  /* ความกว้างของเส้น */
  height: 10px;  /* ความสูงของเส้น */
  background-color: #010101;  /* สีของเส้น */
}

.fill-white path {
  fill: white;
  opacity: 1; /* เต็ม */
}

.fill-black path {
  fill: black;
  opacity: 1;
}

svg path {
  transition: fill 0.5s ease-in-out, opacity 0.5s ease-in-out; /* เฟดทั้งสีและความโปร่งใส */
}

.fill-fade path {
  opacity: 0.5; /* จางลงเล็กน้อย */
}

